@@ -14,6 +14,7 @@
     -split up the chests
     -tried to model the reqs including small keys
   -added small key reqs to Shadow Temple
+  -added small key reqs to Spirit Temple (though this might not be as useful with the age back and forth)
 1.0.0.4:
   -added small key counters
   -started adding open/closed forest/door logic
